--- a/docs/30_problems/50_data_storage.mdx
+++ b/docs/30_problems/50_data_storage.mdx
@@ -62,6 +62,6 @@ If you publish your data in public repositories, your data will also be preserve
 - https://rdmkit.elixir-europe.org/storage.html
 - https://www.rdm.kit.edu/index.php
 - https://www.druva.com/glossary/what-is-data-archiving-definition-and-related-faqs/
-- german: https://www.researchgate.net/publication/221657547_Handbuch_Forschungsdatenmanagement
-- german: https://www.degruyter.com/document/doi/10.1515/9783110657807/html
-- german: https://handbuch.tib.eu/w/Lehrbuch_Forschungsdatenmanagement/_Druckversion
+- German: https://www.researchgate.net/publication/221657547_Handbuch_Forschungsdatenmanagement
+- German: https://www.degruyter.com/document/doi/10.1515/9783110657807/html
+- German: https://handbuch.tib.eu/w/Lehrbuch_Forschungsdatenmanagement/_Druckversion
