--- a/docs/40_topics/20_repositories.mdx
+++ b/docs/40_topics/20_repositories.mdx
@@ -73,4 +73,4 @@ In the field of synthetic and analytical chemistry, the repository [Chemotion](h
 - https://www.dcc.ac.uk/events/fairsfair-repository-support-series-using-registries-improve-visibility-your-repository
 - The Repository Chemotion: infrastructure for sustainable research in chemistry<br/>https://doi.org/10.1002/anie.202007702
 - Chemotion ELN: an open source electronic lab notebook for chemists in academia<br/>https://doi.org/10.1186/s13321-017-0240-0
-- german: [Forschungsdaten.info](https://www.forschungsdaten.info/themen/veroeffentlichen-und-archivieren/repositorien/)
+- German: [Forschungsdaten.info](https://www.forschungsdaten.info/themen/veroeffentlichen-und-archivieren/repositorien/)
