Link to workshop information

--- a/docs/00_intro.mdx
+++ b/docs/00_intro.mdx
@@ -67,5 +67,5 @@ These pages contain general information on concrete RDM topics and concepts expl
 
 
 :::info Info: 
-NFDI4Chem offers regular RDM workshops. For more information, please visit the NFDI4Chem website.
+NFDI4Chem offers regular RDM workshops. For more information, please visit the [NFDI4Chem website](https://www.nfdi4chem.de/index.php/event/workshop-fair-research-data-management-basics-for-chemists/).
 :::
