--- a/docs/40_topics/50_ontology_search.mdx
+++ b/docs/40_topics/50_ontology_search.mdx
@@ -106,7 +106,9 @@ The ChEBI Integrated Role Ontology ([CHIRO](https://github.com/chiro)) is a demo
 The Chemical Information Ontology ([CHEMINF](https://doi.org/10.1371/journal.pone.0025513)) is intended to serve as a single point of truth for the definition and disambiguation of terms and relations used in the domain of cheminformatics. Its scope covers chemical graphs and their various encoding formats, the definition of chemical descriptors, such as InChI or SMILES, commonly used software and algorithms, like the *PubChem software library* or *Lipinski rule of five violation calculation algorithm*, as well as format specifications for chemical data, such as the *MOLfile format specification*. CHEMINF also defines needed chemical qualities, such as *molecular structure * or *charge*, as well as dispositions of chemical entities, like *solubility* or *electronegativity*. Being a highly expressive ontology, the provided axioms of CHEMINF further specify the covered entities in a machine-readable way. CHEMINF must be considered a required resource whenever there arises the need of describing the various properties of chemical entities, their measurementsor predictions, as well as the software and standards used to express these. Its impact is visible in prominent applications such as, the semantic annotation of PubChem’s database, or in the Open PHACTS project.
 
 ### CHMO
-The Chemical Methods Ontology ([CHMO](https://doi.org/10.1021/bk-2014-1164.ch013)), which is mainly based on the knowledge codified in the IUPAC OrangeBook and the Analytical Abstracts of the Royal Society of Chemistry (RSC), focuses on the conceptualization of experimental methods applied in chemistry. Being an OBO compliant ontology, it thus extends OBI's *planned process* branch with classes such as *spectroscopy*, *thermal analysis* (including *calorimetry*) or *magnetic resonance method*. Also IAO's *data item* and *directive information entity* branch together with other OBI branches are being extended by CHMO with classes for certain lab devices, substances and protocols (e.g. *distillation*, *buffer solution* or *hazard reduction*). For the axiomatisation of its classes CHMO reuses chemical entities defined in ChEBI and relations from RO as well as OBI relations. 
+The Chemical Methods Ontology ([CHMO](https://doi.org/10.1021/bk-2014-1164.ch013)), which has been developed by the Royal Society of Chemistry (RSC) and is mainly based on the knowledge codified in the IUPAC OrangeBook and RSC's Analytical Abstracts, focuses on the conceptualization of experimental methods applied in chemistry. Being an OBO compliant ontology, it extends OBI and IAO with classes that conceptualize needed assays methods, such as *spectroscopy*, *thermal analysis* (including *calorimetry*) or *magnetic resonance method*, as well as lab devices, substances and protocols (e.g. *distillation*, *buffer solution* or *hazard reduction*). For the axiomatisation of its classes CHMO reuses chemical entities defined in ChEBI and relations from OBI as well as BFO. However, the latter should best be substituted with corresponding RO relations instead to avoid interoperability issues (see also [BFO](/docs/topics/ontology/#introduction)).
+
+
 
 ### MOP
 **TODO**
