--- a/docs/40_topics/50_ontology_search.mdx
+++ b/docs/40_topics/50_ontology_search.mdx
@@ -126,8 +126,10 @@ The Process Chemistry Ontology ([PROCO](https://www.youtube.com/watch?v=HVv8TJc7
 Due to PROCO's scope, the fact that this is a cooperation between industry and academia, and the intention to integrate PROCO as a module in the Allotrope framework with the aim to improve industrial production, means that future developments should be monitored. Also being a “community-based ontology”, makes PROCO a great candidate for reuse.
 
 ### MS
-**TODO**
+The Mass spectrometry ontology ([MS](https://doi.org/10.1016/j.bbapap.2013.02.017)), developed under the Human Proteome Organization Proteomics Standards Initiative (HUPO-PSI), focuses on the description of mass spectrometer output files and the interpretation of mass spectra, with the two most important branches anchored in the root classes *spectrum generation information* and *spectrum interpretation*. The other ten branches contain the classes needed to represent related concepts (e.g. *molecular entity*, *software* or *regular expression*). They are either differentiated into finer subclasses (e.g. *atom*, *Brucker software* or *Cleavage agent regular expression*), or associated with conceptually similar classes using the MS *part_of* relation. For example, the *molecular entity attribute* class, which is defined as part of the *molecular entity* class, provides in its subclasses the attributes needed to further describe a molecular entity (e.g. *SMILES formula*). This partonomy structure provides a grouping of concepts that is directly usable in the software that generates the XML based files that encode MS experiment information. For the representation of other common qualities needed in this domain, MS directly imports PATO, and for SI units as well as common quantity prefixes it directly imports UO. Undocumented are the reasons why semantically similar classes are not reused from or aligned with other external ontologies (e.g. *SMILES formula* or *InchiKey* in CHEMINF, or all the same molecular entities in ChEBI).
+
 ### nmrCV
+The scope of the nuclear magnetic resonance CV ([nmrCV](http://dx.doi.org/10.1021/acs.analchem.7b02795)) is the conceptualisation of terms needed in the description of nuclear magnetic resonance (NMR) assays. It is developed by experts from the Metabolomics Standards Initiative (MSI) under the governance of the COSMOS EU and PhenoMeNal EU projects and maintained on GitHub. Being designed as a simple taxonomy, nmrCV has no object or data properties. Its primary application context, is the creation and validation of XML files storing NMR assay data in the nmrML file format. With regard to its modularity, it can be noted that nmrCV is BFO-based, but otherwise does not really follow the OBO core principle of reusing as much as possible from existing OBO ontologies. For example, such general classes as *software* and *instrument* are defined in nmrCV instead of being reused from IAO or OBI. The same is true for some of the domain specific concepts such as* NMR pulse sequences* or NMR instruments, for which there are already equivalents in CHMO. A mapping to such close or exact matches in other ontologies is also not provided. This might be hindering a direct reuse of nmrCV in different application contexts. A semantic harmonization with the existing OBO ontologies, especially with CHMO, is thus a needed improvement to enhance interoperability.
 
 ## Glossary
 In order to be able to speak about the existing ontologies in the domain of chemistry, we need to provide a very brief glossary of the most important technical terms that describe an ontology:
